objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>TaxesProjectedCost__c</fullName>
        <formula>ProjectedFederal__c + 
ProjectedState__c + 
ProjectedLocal__c + 
TaxesProjectedOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxes Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxesProjectedOther__c</fullName>
        <label>Taxes Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalActualCost__c</fullName>
        <formula>FoodActualCost__c + 
PetsActualCost__c + 
PersonalCareActualCost__c + 
EntertainmentActualCost__c + 
LoansActualCost__c + 
TaxesActualCost__c + 
SavingsorInvestmentsActualCost__c + 
GiftsandDonationsActualCost__c + 
LegalActualCost__c + HousingActualCost__c + TransportationActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalDifference__c</fullName>
        <formula>TotalProjectedCost__c -  TotalActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectedCost__c</fullName>
        <formula>FoodProjectedCost__c +
PetsProjectedCost__c +
PersonalCareProjectedCost__c +
EntertainmentProjectedCost__c +
LoansProjectedCost__c +
TaxesProjectedCost__c +
SavingsorInvestmentsProjectedCost__c +
GiftsandDonationsProjectedCost__c +
LegalProjectedCost__c + HousingProjectedCost__c + TransportationProjectedCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Income_Difference__c</fullName>
        <formula>ProjectedTotalMonthlyIncome__c - ActualTotalMonthlyIncome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Income Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ToysDifference__c</fullName>
        <formula>ProjectedToys__c - ActualToys__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Toys Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransportationActualCost__c</fullName>
        <formula>ActualVehiclePayment__c +  ActualInsurance__c +  ActualLicensing__c +  ActualFuel__c +  ActualMaintenance__c +  TransportationActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transportation Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransportationActualOther__c</fullName>
        <label>Transportation Actual Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransportationDiffrence__c</fullName>
        <formula>TransportationProjectedCost__c -  TransportationActualCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transportation Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransportationOtherDiffrence__c</fullName>
        <formula>TransportationProjectedOther__c -  TransportationActualOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transportation Other Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransportationProjectedCost__c</fullName>
        <formula>ProjectedVehiclePayment__c +  ProjectedInsurance__c +  ProjectedLicensing__c +  ProjectedFuel__c +  ProjectedMaintenance__c +  TransportationProjectedOther__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transportation Projected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransportationProjectedOther__c</fullName>
        <label>Transportation Projected Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unemployment_Difference__c</fullName>
        <formula>ProjectedUnemployment__c - ActualUnemployment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unemployment Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VehiclePaymentDiffrence__c</fullName>
        <formula>ProjectedVehiclePayment__c - ActualVehiclePayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Payment Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WasteRemovalDiffrence__c</fullName>
        <formula>ProjectedWasteRemoval__c -  ActualWasteRemova__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Waste Removal Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WaterAndSewerDiffrence__c</fullName>
        <formula>ProjectedWaterAndSewer__c -  ActualWaterAndSewer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Water and Sewer Diffrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Withholding_Difference__c</fullName>
        <formula>ProjectedWithholding__c - ActualWithholding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Withholding Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget</label>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>